Inmob-Salesforce/force-app/main/default/objects/Vehiculo__c/Vehiculo__c.object-meta.xml
<CustomObject>
    <label>Vehículo</label>
    <nameField>
        <label>Nombre de Vehículo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehículos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>