Inmob-Salesforce/force-app/main/default/objects/Vehiculo__c/fields/CI_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CI_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehículos</relationshipLabel>
    <relationshipName>Vehiculos</relationshipName>
    <type>Lookup</type>
</CustomField>