Inmob-Salesforce/force-app/main/default/objects/Vehiculo__c/fields/CI_Gravamen__c.field-meta.xml
<CustomField>
    <fullName>CI_Gravamen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gravamen</label>
    <type>Checkbox</type>
</CustomField>