Inmob-Salesforce/force-app/main/default/objects/Vehiculo__c/fields/CI_Modelo__c.field-meta.xml
<CustomField>
    <fullName>CI_Modelo__c</fullName>
    <label>Modelo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>