Inmob-Salesforce/force-app/main/default/objects/Vehiculo__c/fields/CI_Placa__c.field-meta.xml
<CustomField>
    <fullName>CI_Placa__c</fullName>
    <label>Placa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>